--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!--Add CSS to the page. When complete it should look like Fashion_Blog.png
-Do you see new tags? Look them up so you are growing your tag vocabulary. 
-Bonus: Google <footer> </footer> tag and implement the page footer.
-Add Google Fonts.
--->
+<!--Add CSS to the page. When completed it should look like Fashion_Blog.png -->
+<!-- Do you see new tags? Look them up so you are growing your tag vocabulary. -->
+<!-- Bonus: Add Google Fonts. -->
 
 <!doctype html>
 <html lang="en-us">
